--- a/css/contacto.css
+++ b/css/contacto.css
@@ -136,7 +136,8 @@ a {
 .form-info select {
     /* background: var(--background-terciario); */
 
-    background: var(--color-fondo-rosa-dark);
+    /* background: var(--color-fondo-rosa-dark); */
+    background: var(--color-fondo-morado-dark);
 
     padding: .5rem;
     border: 1px solid rgb(255 255 255 / 9%);
@@ -172,7 +173,8 @@ a {
 
 .form-info__comentario textarea {
     /* background: var(--background-terciario); */
-    background: var(--color-fondo-rosa-dark);
+    /* background: var(--color-fondo-rosa-dark); */
+    background: var(--color-fondo-morado-dark);
 
     padding: .5rem;
     border: 1px solid rgb(255 255 255 / 9%);
@@ -182,7 +184,8 @@ a {
 
 .form-submit input {
     /* background: var(--background-terciario); */
-    background: var(--color-fondo-rosa-dark);
+    /* background: var(--color-fondo-rosa-dark); */
+    background: var(--color-fondo-morado-dark);
     
     padding: .5rem 2rem;
     border: 1px solid rgb(255 255 255 / 9%);
