--- a/css/styles.css
+++ b/css/styles.css
@@ -260,11 +260,12 @@ main {
 
 .container-mastering__img {
     /* background: var(--color-fondo-rosa); */
-    display: flex;
+    /* display: flex;
     flex-direction: column-reverse;
-    /* width: 500px; */
     height: 100%;
-    min-height: 600px;
+    min-height: 600px; */
+    /* height: 500px; 
+    overflow-y: scroll;  */
 
 }
 
