--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,25 @@
   }
 
 
+::-webkit-scrollbar {
+    width: 12px; 
+}
+
+::-webkit-scrollbar-track {
+    background-color: #f1f1f1; 
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #888; 
+
+
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #555; 
+    
+    cursor: pointer;
+}
 
 
 
@@ -98,7 +117,10 @@
 
 body {
     background: var(--color-fondo-rosa) !important;
+
 }
+
+
 
 a {
     text-decoration: none !important;
@@ -264,8 +286,9 @@ main {
     flex-direction: column-reverse;
     height: 100%;
     min-height: 600px; */
-    /* height: 500px; 
+    /* ; 
     overflow-y: scroll;  */
+    
 
 }
 
